--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -5,10 +5,8 @@
       "page": "Page {{ page }}"
     },
     "404": {
-      "title": "Not found",
-      "subtext_html": "The page you were looking for does not exist",
-      "title": "404 Page Not Found",
-      "subtext_html": "The page you requested does not exist. Click <a href=\"/collections/all\">here</a> to continue shopping."
+      "subtext_html": "We can't find the page you are looking for.",
+      "title": "404 Page Not Found"
     },
     "breadcrumbs": {
       "home": "Home",
