--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -75,7 +75,7 @@
       "update": "Update Cart",
       "checkout": "Checkout",
       "empty": "Your cart is currently empty.",
-      "continue_browsing_html": "Continue browsing.",
+      "continue_browsing_html": "Continue shopping",
       "cookies_required": "Enable cookies to use the shopping cart",
       "close_cart": "Close Cart",
       "savings_html": "You're saving {{ price }}",
